# codesearch

./: LICENSE  README.md  pyproject.toml
codesearch/: cli.py  config.py
codesearch/indexing/: bm25_index.py  graph_index.py  vector_index.py
codesearch/parsing/: parser.py
codesearch/pipeline/: fusion.py  reranker.py
codesearch/providers/: base.py  gemini.py  ollama.py
codesearch/retrieval/: bm25_retriever.py  graph_retriever.py  types.py  vector_retriever.py
eval/: queries.json  run_eval.py
