[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codesearch"
version = "0.1.0"
description = "Hybrid lexical + semantic + structural code search CLI"
requires-python = ">=3.10"
dependencies = [
    "rank-bm25",
    "chromadb",
    "sentence-transformers",
    "networkx",
    "typer",
    "keyring",
    "google-genai",
    "ollama",
]

[project.scripts]
codesearch = "codesearch.cli:app"